Closed Bug 1654128 Opened 5 years ago Closed 5 years ago

Missing #includes in lul

Categories

(Core :: Gecko Profiler, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla80
Tracking Status
firefox80 --- fixed

People

(Reporter: mozbugz, Assigned: mozbugz)

Details

Attachments

(1 file)

While working on something else I stumbled upon some missing #includes in lul files.

The build would fail in non-unified mode and/or when adding/removing other files.

Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/a8cfd6efb453 Added missing #includes in baseprofiler/lul - r=canaltinova
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla80
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: