Bug 1654128 - Added missing #includes in baseprofiler/lul - r=canaltinova

The build would fail in non-unified mode and/or when adding/removing other files.

Differential Revision: https://phabricator.services.mozilla.com/D84272