mozglue/baseprofiler/lul/LulMainInt.h
@@ -10,9 +10,10 @@
 #include "PlatformMacros.h"
 #include "LulMain.h"  // for TaggedUWord
 
-#include <vector>
-
 #include "mozilla/Assertions.h"
+
+#include <string>
+#include <vector>
 
 // This file is provides internal interface inside LUL.  If you are an
 // end-user of LUL, do not include it in your code.  The end-user
